--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,4 +1,3 @@
-
 <section class="hero">
   <div class="container hero-container">
     <div class="hero-contant">
@@ -9,7 +8,7 @@
       </p>
       <div class="hero-buttons">
         <div class="hero-main-buttons animate__animated animate__fadeInLeft">
-          <button class="hero-btn">Buy now</button>
+          <button class="hero-btn js-open-modal" data-modal="3">Buy now</button>
           <a href="#how-its-made" class="hero-btn hero-how-it">How it's made</a>
         </div>
         <a
@@ -23,7 +22,6 @@
           </span>
         </a>
       </div>
-
     </div>
   </div>
 </section>
