--- a/src/css/leave-a-review.css
+++ b/src/css/leave-a-review.css
@@ -68,7 +68,7 @@
   padding-left: 18px;
   width: 100%;
   border-radius: 8px;
-  border: 1.5px solid rgba(0, 0, 0, 0.03);
+  border: 1.5px solid rgba(17, 17, 17, 0.1);
   background-color: var(--white-color);
   transition: border-color var(--time-function);
 }
@@ -87,11 +87,11 @@
 .modal-form-phone-wraper::after {
   position: absolute;
   content: '';
-  width: 3px;
+  width: 1.5px;
   height: 30px;
   top: -1px;
   left: 90px;
-  background-color: rgba(250, 250, 250, 1);
+  background-color: rgba(17, 17, 17, 0.1);
   border-radius: 8px;
 }
 
@@ -116,7 +116,7 @@
   resize: none;
   height: 91px;
   border-radius: 8px;
-  border: 1.5px solid rgba(17, 17, 17, 0.05);
+  border: 1.5px solid rgba(17, 17, 17, 0.1);
   transition: border-color var(--time-function);
 }
 .modal-form-leave-a-review-message:focus {
@@ -124,17 +124,18 @@
   outline: none;
 }
 .modal-form-leave-a-review-input::placeholder {
-  
   font-size: 14px;
   font-weight: 400;
   line-height: 1.2;
   letter-spacing: -0.02em;
+  color: rgba(64, 64, 64, 0.3);
 }
 .modal-form-leave-a-review-message::placeholder {
   font-size: 14px;
   font-weight: 400;
   line-height: 1.2;
   letter-spacing: -0.02em;
+  color: rgba(64, 64, 64, 0.3);
 }
 
 @media screen and (max-width: 767px) {
@@ -152,9 +153,7 @@
 }
 @media screen and (min-width: 768px) {
   .modal-form-phone-wraper {
-   
     top: 20px;
-    
   }
   .modal-leave-a-review {
     width: 517px;
