--- a/src/partials/explore-our-new.html
+++ b/src/partials/explore-our-new.html
@@ -8,41 +8,43 @@
     <source
       media="(min-width: 1200px)"
       srcset="
-        /img/modal-subscribe/chocolate-md1x.jpg 1x,
-        /img/modal-subscribe/chocolate-md2x.jpg 2x
+        /img/modal-subscribe/chocolate-md@1x.jpg 1x,
+        /img/modal-subscribe/chocolate-md@2x.jpg 2x
       "
       type="image/jpeg"
     />
     <source
       media="(min-width: 768px)"
       srcset="
-        /img/modal-subscribe/chocolate-md1x.jpg 1x,
-        /img/modal-subscribe/chocolate-md2x.jpg 2x
+        /img/modal-subscribe/chocolate-md@1x.jpg 1x,
+        /img/modal-subscribe/chocolate-md@2x.jpg 2x
       "
       type="image/jpeg"
     />
     <source
       media="(max-width: 767px)"
       srcset="
-        /img/modal-subscribe/chocolate-sm1x.jpg 1x,
-        /img/modal-subscribe/chocolate-sm2x.jpg 2x
+        /img/modal-subscribe/chocolate-sm@1x.jpg 1x,
+        /img/modal-subscribe/chocolate-sm@2x.jpg 2x
       "
     />
 
     <img
       class="explore-modal-img"
-      src="/img/modal-subscribe/chocolate-sm1x.jpg"
+      src="/img/modal-subscribe/chocolate-sm@1x.jpg"
       alt="chocolate"
+       width="538"
+        height="196"
+        loading="lazy"
     />
   </picture>
 
   <div class="subscribe-info">
-    <div class="subscribe-text-lines">
-      <h2 class="section-title sub-modal-title">
-        Explore our <br />
-        <span class="section-title-accent">new chocolate</span> first!
-      </h2>
-    </div>
+    <h2 class="section-title sub-modal-title">
+      Explore our <br />
+      <span class="section-title-accent">new chocolate</span> first!
+    </h2>
+
     <div class="subscribe-wrap">
       <form class="subscribe-form">
         <label class="subscribe-label">
@@ -50,10 +52,11 @@
             class="subscribe-mail"
             type="email"
             name="mail"
+            required
             placeholder="Enter your email"
           />
         </label>
-        <button type="button" class="btn subscribe-modal-btn">Submit</button>
+        <button type="submit" class="btn subscribe-modal-btn">Submit</button>
       </form>
     </div>
   </div>
