--- a/src/partials/buy-now.html
+++ b/src/partials/buy-now.html
@@ -8,7 +8,7 @@
       <use href="/img/sprite.svg#icon-close-modal24"></use>
     </svg>
   </button>
-  <div class="modal-form-leave-a-review-title-wrap">
+  <div class="modal-form-leave-a-review-title-wrap buy">
     <p class="modal-title section-title">
       buy
       <span class="modal-title-span">now</span>
@@ -107,10 +107,10 @@
     </ul>
     <div class="modal-form-wrap">
       <form class="modal-form-leave-a-review buy">
-        <label class="modal-form-leave-a-review-field buy">
+        <label class="modal-form-leave-a-review-field buynow">
           <span class="label-desc">Personal information</span>
           <input
-            class="modal-form-leave-a-review-input buy"
+            class="modal-form-leave-a-review-input buynow"
             placeholder="Name"
             required
             name="user_name"
@@ -119,7 +119,7 @@
             minlength="2"
           />
           <input
-            class="modal-form-leave-a-review-input buy"
+            class="modal-form-leave-a-review-input buynow"
             placeholder="Surname"
             required
             name="user_surname"
@@ -163,7 +163,7 @@
             <label class="modal-form-leave-a-review-field buy">
               <span class="label-desc">Card number</span>
               <input
-                class="modal-form-leave-a-review-input buynow"
+                class="modal-form-leave-a-review-input buy"
                 placeholder="Enter card"
                 required
                 name="credit-number"
@@ -172,7 +172,7 @@
                 maxlength="19"
                 title="xx-xxx-xx-xx"
               />
-              <svg class="icon-card" width="22" height="12">
+              <svg class="icon-card">
                 <use href="/img/sprite.svg#iconMastercard"></use>
               </svg>
             </label>
@@ -187,7 +187,7 @@
             ></textarea>
           </label>
         </div>
-        <button class="modal-form-leave-a-review btn" type="submit">
+        <button class="modal-form-leave-a-review btn buy" type="submit">
           Submit
         </button>
       </form>
