--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -50,6 +50,8 @@
         </p>
       </li>
     </ul>
-    <button type="button" class="btn reviews js-open-modal" data-modal="2">Leave a review</button>
+    <button type="button" class="btn reviews js-open-modal" data-modal="2">
+      Leave a review
+    </button>
   </div>
 </section>
