--- a/src/css/subscribe.css
+++ b/src/css/subscribe.css
@@ -2,36 +2,22 @@
 .subscribe {
   margin-right: auto;
   margin-left: auto;
-  background-color: var(  --bgc-color);
-  background-image: linear-gradient(
-      0deg,
-      rgba(0, 0, 0, 0.2),
-      rgba(0, 0, 0, 0.2)
+  background-color: var(--bgc-color);
+  background-image: -webkit-image-set(
+      url('/img/subcribe/subcribe_s@2x.webp') 2x,
+      url('/img/subcribe/subcribe_s.webp') 1x,
+      url('/img/subcribe/subcribe_s@2x.jpg') 2x,
+      url('/img/subcribe/subcribe_s.jpg') 1x
     ),
-    url(/img/subcribe/subcribe_s.jpg);
+    linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2));
+
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  background-attachment: fixed;
   padding: 62px 0 63px 0;
   text-align: center;
 
   height: 370px;
-}
-/*mobil*/
-@media screen and (min-device-pixel-ratio: 2),
-  screen and (-moz-min-device-pixel-ratio: 2),
-  screen and (-webkit-min-device-pixel-ratio: 2),
-  screen and (min-resolution: 192dpi),
-  screen and (min-resolution: 2dppx) {
-  .subscribe {
-    background-image: linear-gradient(
-        0deg,
-        rgba(0, 0, 0, 0.2),
-        rgba(0, 0, 0, 0.2)
-      ),
-      url(/img/subcribe/subcribe_s@2x.jpg);
-  }
 }
 
 .subscribe .subscribe-title {
@@ -49,29 +35,17 @@
 /*tablet*/
 @media screen and (min-width: 768px) {
   .subscribe {
-       padding: 72px 0 72px 0;
-    background-image: linear-gradient(
-        0deg,
-        rgba(0, 0, 0, 0.2),
-        rgba(0, 0, 0, 0.2)
+    padding: 72px 0 72px 0;
+    background-image: -webkit-image-set(
+        url('/img/subcribe/subcribe_m@2x.webp') 2x,
+        url('/img/subcribe/subcribe_m.webp') 1x,
+        url('/img/subcribe/subcribe_m@2x.jpg') 2x,
+        url('/img/subcribe/subcribe_m.jpg') 1x
       ),
-      url(/img/subcribe/subcribe_m.jpg);
+      linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2));
   }
-  @media screen and (min-width: 768px) and (min-device-pixel-ratio: 2),
-    screen and (min-width: 768px) and (-moz-min-device-pixel-ratio: 2),
-    screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2),
-    screen and (min-width: 768px) and (min-resolution: 192dpi),
-    screen and (min-width: 768px) and (min-resolution: 2dppx) {
-    .subscribe {
-      background-image: linear-gradient(
-          0deg,
-          rgba(0, 0, 0, 0.2),
-          rgba(0, 0, 0, 0.2)
-        ),
-        url(/img//subcribe/subcribe_m@2x.jpg);
-    }
-  }
-    .subscribe .subscribe-title {
+
+  .subscribe .subscribe-title {
     font-size: 24px;
     max-width: 378px;
   }
@@ -90,27 +64,13 @@
 /*desktop*/
 @media screen and (min-width: 1200px) {
   .subscribe {
-
     padding: 72px 0 95px 0;
-    background-image: linear-gradient(
-        0deg,
-        rgba(0, 0, 0, 0.2),
-        rgba(0, 0, 0, 0.2)
+    background-image: -webkit-image-set(
+        url('/img/subcribe/subcribe_b@2x.webp') 2x,
+        url('/img/subcribe/subcribe_b.webp') 1x,
+        url('/img/subcribe/subcribe_b@2x.jpg') 2x,
+        url('/img/subcribe/subcribe_b.jpg') 1x
       ),
-      url(/img/subcribe/subcribe_b.jpg);
-  }
-  @media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2),
-    screen and (min-width: 1200x) and (-moz-min-device-pixel-ratio: 2),
-    screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2),
-    screen and (min-width: 1200px) and (min-resolution: 192dpi),
-    screen and (min-width: 1200px) and (min-resolution: 2dppx) {
-    .subscribe {
-      background-image: linear-gradient(
-          0deg,
-          rgba(0, 0, 0, 0.2),
-          rgba(0, 0, 0, 0.2)
-        ),
-        url(/img/subcribe/subcribe_b@2x.jpg);
-    }
+      linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2));
   }
 }
