--- a/src/partials/top-sellers.html
+++ b/src/partials/top-sellers.html
@@ -66,6 +66,7 @@
       <li class="top-sellers-item">
         <picture>
           <source
+          type="image/webp"
             srcset="
               /img/top-sellers/raisinand-mobile-1x.webp 1x,
               /img/top-sellers/raisinand-mobile-2x.webp 2x
@@ -80,6 +81,7 @@
             media="(max-width: 767px)"
           />
           <source
+          type="image/webp"
             srcset="
               /img/top-sellers/raisinand-tablet-1x.webp 1x,
               /img/top-sellers/raisinand-tablet-2x.webp 2x
@@ -94,6 +96,7 @@
             media="(max-width: 1199px)"
           />
           <source
+          type="image/webp"
             srcset="
               /img/top-sellers/raisinand-desktop-1x.webp 1x,
               /img/top-sellers/raisinand-desktop-2x.webp 2x
@@ -118,6 +121,7 @@
       <li class="top-sellers-item third-foto">
         <picture>
           <source
+          type="image/webp"
             srcset="
               /img/top-sellers/chocolate-1x.webp 1x,
               /img/top-sellers/chocolate-2x.webp 2x
@@ -146,7 +150,7 @@
         called Cacao. Cacao has been around for thousands of years and was first
         discovered by the Native American tribe called the Mayans.
       </p>
-      <button type="button" class="btn js-open-modal" data-modal="4">
+      <button type="button" class="btn js-open-modal" data-modal="2">
         Pay now
       </button>
     </div>
