--- a/src/css/leave-a-review.css
+++ b/src/css/leave-a-review.css
@@ -8,7 +8,8 @@
 @media screen and (min-width: 768px) {
   .modal.review {
     width: 517px;
-    height: 631px;
+    height: 617px;
+    padding: 40px;
   }
 }
 
@@ -16,12 +17,10 @@
   position: absolute;
   top: 14px;
   right: 14px;
-  /* width: 24px;
-    height: 24px; */
+
   background-color: transparent;
   border-radius: 50%;
   border-color: transparent;
-  /* border: none; */
   padding: 0;
   transition: background-color var(--time-function);
 }
@@ -38,7 +37,8 @@
 }
 /*    MODAL FORM */
 .modal-form-leave-a-review {
-  display: block;
+  display: flex;
+  flex-direction: column;
 }
 
 .modal-form-leave-a-review-title.section-title {
@@ -48,80 +48,83 @@
 .modal-leave-a-review-span {
   color: var(--main-accent-color);
 }
+
+.modal-form-leave-a-review-field {
+  display: block;
+  margin-bottom: 14px;
+}
+
 .modal-form-leave-a-review-input {
-  color: var(--primary-color);
-  padding-left: 18px;
+  padding: 14px 18px;
   width: 100%;
   border-radius: 8px;
   border: 1.5px solid rgba(17, 17, 17, 0.1);
+  box-shadow: 0 5.44px 5.44px #00000008;
   background-color: var(--white-color);
   transition: border-color var(--time-function);
 }
 
-.modal-form-phone-wraper {
-  position: absolute;
-  top: 11px;
-  left: 24px;
-  display: flex;
-  align-items: center;
-  font-weight: 500;
+.modal-form-leave-a-review-input::placeholder,
+.modal-form-leave-a-review-message::placeholder {
+  font-weight: 400;
   font-size: 14px;
-  line-height: 1.33;
-  color: rgba(0, 0, 0, 1);
+  line-height: 1.21;
+  letter-spacing: -0.02em;
+  color: var(--placeholder-color);
 }
-.modal-form-phone-wraper::after {
-  position: absolute;
 
-  content: '';
-  width: 1.5px;
-  height: 25px;
-  top: 0;
-  left: 85px;
-  background-color: rgba(17, 17, 17, 0.1);
-  border-radius: 8px;
+.modal-form-phone-wrapper {
+  display: block;
+  position: relative;
 }
 
 .flag-phone {
-  margin-right: 18px;
+  position: absolute;
+  top: 50%;
+  left: 18px;
+  transform: translateY(-50%);
 }
 .input-phone {
-  padding-left: 130px;
+  padding-left: 106px;
 }
-
-.modal-icon-leave-a-review-wrap {
-  position: relative;
+.modal-form-leave-review-input-tel-text {
+  position: absolute;
+  top: 50%;
+  left: 50px;
+  transform: translateY(-50%);
+  font-weight: 500;
+  line-height: 1.21;
+  letter-spacing: -0.02em;
 }
-.modal-form-leave-a-review-input:focus {
+.modal-form-leave-review-input-tel-text::after {
+  content: '';
+  display: inline-block;
+  position: absolute;
+  top: -5px;
+  right: -8px;
+  width: 1px;
+  height: 25px;
+  background-color: var( --placeholder-color);
+}
+.modal-form-leave-a-review-input:focus,
+.modal-form-leave-a-review-message:focus {
   border-color: var(--main-accent-color);
   outline: none;
 }
 .modal-form-leave-a-review-message {
-  margin-bottom: 18px;
+  display: block;
   padding: 14px 18px;
   width: 100%;
   resize: none;
   height: 91px;
   border-radius: 8px;
+  box-shadow: 0 5.44px 5.44px #00000008;
   border: 1.5px solid rgba(17, 17, 17, 0.1);
   transition: border-color var(--time-function);
 }
-.modal-form-leave-a-review-message:focus {
-  border-color: var(--main-accent-color);
-  outline: none;
-}
-.modal-form-leave-a-review-input::placeholder {
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 1.2;
-  letter-spacing: -0.02em;
-  color: rgba(64, 64, 64, 0.3);
-}
-.modal-form-leave-a-review-message::placeholder {
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 1.2;
-  letter-spacing: -0.02em;
-  color: rgba(64, 64, 64, 0.3);
+
+.modal-form-leave-a-review-field-message {
+  margin-bottom: 18px;
 }
 
 @media screen and (max-width: 767px) {
@@ -131,30 +134,49 @@
   .modal-form-leave-a-review-title-wrap {
     width: 255px;
   }
-  .modal-form-leave-a-review-input {
-    height: 45px;
-    margin-bottom: 14px;
-  }
 }
 @media screen and (min-width: 768px) {
-  .modal-leave-a-review {
-    width: 517px;
-    height: 631px;
-  }
   .modal-form-leave-a-review-title.section-title {
     margin-bottom: 40px;
   }
   .modal-form-leave-a-review-title-wrap {
     width: 298px;
   }
-  .modal-form-leave-a-review-input {
-    height: 66px;
+  .modal-form-leave-a-review-field {
     margin-bottom: 19px;
+  }
+  .modal-form-leave-a-review-input {
+    padding: 22px 24px;
+  }
+  .modal-form-leave-a-review-input::placeholder,
+  .modal-form-leave-a-review-message::placeholder {
+    font-size: 18px;
+    line-height: 1.22;
+  }
+  .input-phone {
+    padding-left: 177px;
+  }
+
+  .flag-phone {
+    width: 32px;
+    height: 24px;
+    left: 24px;
+  }
+  .modal-form-leave-review-input-tel-text {
+    left: 74px;
+    font-size: 18px;
+    line-height: 1.22;
+  }
+  .modal-form-leave-review-input-tel-text::after {
+    right: -32px;
   }
   .modal-form-leave-a-review-message {
     height: 137px;
   }
-  .modal-form-phone-wraper {
-    top: 20px;
+  .btn.modal-form-leave-a-review-btn {
+    padding: 14px 40px;
+  }
+  .modal-form-leave-review-input-tel-text::after {
+    height: 35px;
   }
 }
