--- a/src/partials/leave-a-review.html
+++ b/src/partials/leave-a-review.html
@@ -8,12 +8,11 @@
       <use href="/img/sprite.svg#icon-close-modal24"></use>
     </svg>
   </button>
-  <div class="modal-form-leave-a-review-title-wrap">
-    <p class="modal-form-leave-a-review-title section-title">
-      leave a review about
-      <span class="modal-leave-a-review-span">our chocolate</span>
-    </p>
-  </div>
+  <p class="modal-form-leave-a-review-title section-title">
+    leave a review about <br />
+    <span class="modal-leave-a-review-span">our chocolate</span>
+  </p>
+
   <div class="modal-form-wrap-leave-a-review">
     <form class="modal-form-leave-a-review">
       <label class="modal-form-leave-a-review-field">
@@ -36,36 +35,34 @@
           type="text"
         />
       </label>
-      <div class="modal-leave-a-review-container">
-        <div class="modal-icon-leave-a-review-wrap">
-          <label class="modal-form-leave-a-review-field">
-            <span class="modal-form-phone-wraper"
-              ><svg class="flag-phone" width="24" height="24">
-                <use href="/img/sprite.svg#icon-ukraine-flag"></use>
-              </svg>
-              +380</span
-            >
-            <input
-              class="modal-form-leave-a-review-input input-phone"
-              placeholder="Phone number"
-              required
-              name="user-phone"
-              type="tel"
-              pattern="[0-9]{2}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
-              title="xx-xxx-xx-xx"
-            />
-          </label>
-        </div>
-        <label class="modal-form-leave-a-review-field">
-          <textarea
+      <label class="modal-form-leave-a-review-field">
+        <span class="modal-form-phone-wrapper">
+          <input
+            class="modal-form-leave-a-review-input input-phone"
+            placeholder="Phone number"
             required
-            name="user_message"
-            class="modal-form-leave-a-review-message"
-            placeholder="Enter text"
-          ></textarea>
-        </label>
-      </div>
-      <button class="modal-form-leave-a-review btn" type="button">Send</button>
+            name="user-phone"
+            type="tel"
+            pattern="[0-9]{2}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
+            title="xx-xxx-xx-xx"
+          />
+          <svg class="flag-phone" width="24" height="24">
+            <use href="/img/sprite.svg#icon-ukraine-flag"></use>
+          </svg>
+          <span class="modal-form-leave-review-input-tel-text">+380</span>
+        </span>
+      </label>
+      <label class="modal-form-leave-a-review-field-message">
+        <textarea
+          required
+          name="user_message"
+          class="modal-form-leave-a-review-message"
+          placeholder="Enter text"
+        ></textarea>
+      </label>
+      <button class="modal-form-leave-a-review-btn btn" type="button">
+        Send
+      </button>
     </form>
   </div>
 </div>
