--- a/src/css/pay-now.css
+++ b/src/css/pay-now.css
@@ -1,8 +1,9 @@
 /*    MODAL FORM */
 .modal.pay-now {
-  min-width: 311px;
-  min-height: 471px;
+  width: 311px;
+  height: 615px;
   padding: 32px 24px;
+  overflow: scroll;
 }
 
 .modal-close-pay-now-btn {
@@ -27,25 +28,24 @@
 .modal-close-pay-now-btn:focus .modal-close-icon-pay-now:focus {
   fill: var(--main-accent-color);
 }
-.modal-form-pay-now-title{
+.modal-form-pay-now-title {
   margin-bottom: 18px;
 }
-.pay-now-span{
+.pay-now-span {
   color: var(--main-accent-color);
 }
-.pay-now-type-list{
+.pay-now-type-list {
   margin-bottom: 18px;
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 30px;
-
 }
-.pay-now-first-btn{
+.pay-now-first-btn {
   margin-bottom: 18px;
   position: relative;
 }
-.pay-now-subtitle{
+.pay-now-subtitle {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.33;
@@ -53,73 +53,88 @@
   text-align: center;
   margin-bottom: 18px;
 }
-.pay-now-subtitle:before{
+.pay-now-subtitle:before {
   position: absolute;
-  content: "";
+  content: '';
   width: 60px;
   height: 1px;
   background-color: var(--main-accent-color);
   top: 200px;
   left: 25px;
 }
-.pay-now-subtitle::after{
+.pay-now-subtitle::after {
   position: absolute;
-  content: "";
+  content: '';
   width: 60px;
   height: 1px;
   background-color: var(--main-accent-color);
   top: 200px;
- right: 25px;
+  right: 25px;
 }
-.modal-form-pay-now-span{
+.modal-form-pay-now-field {
+  display: block;
+  margin-bottom: 14px;
+}
+.modal-form-pay-now-span {
+  display: block;
   font-weight: 500;
   font-size: 14px;
   line-height: 1.33;
   letter-spacing: -0.02em;
   margin-bottom: 4px;
 }
-.modal-form-pay-now-input{
-  margin-bottom: 14px;
-  height: 45px;
+.modal-form-pay-now-input {
   width: 100%;
-  color: var(--primary-color);
-  padding-left: 18px;
+  padding: 14px 18px;
   width: 100%;
   border-radius: 8px;
   border: 1.5px solid rgba(0, 0, 0, 0.03);
   background-color: var(--white-color);
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.08), 0px 1px 1px rgba(0, 0, 0, 0.04);
   transition: border-color var(--time-function);
 }
-.modal-form-input-card-wrap{
-  display: flex;
-  gap: 0;
+.modal-form-pay-now-input::placeholder {
+  color: var(--placeholder-color);
 }
+
 .modal-form-pay-now-input:focus {
   border-color: var(--main-accent-color);
   outline: none;
 }
-.modal-form-pay-now-icon-cvc-wrap{
-  position: absolute;
-  left: 250px;
-  bottom: 485px;
+.modal-form-pay-now-icon-cvc-wrap {
+  display: block;
+  position: relative;
 }
-.modal-form-pay-now-icon-card-wrap{
+.modal-form-pay-now-cvc {
   position: absolute;
-  left: 250px;
-  bottom: 545px;
+  top: 10px;
+  left: 95px;
 }
-.modal-form-pay-now-check{
+.modal-form-pay-now-icon-card-wrap {
+  display: block;
+  position: relative;
+}
+.modal-form-pay-now-card {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+}
+.modal-form-input-card-wrap {
+  display: flex;
+  gap: 2;
+  margin-bottom: 14px;
+}
+.modal-form-pay-now-check {
   width: 100%;
   display: block;
   height: 45px;
   margin-bottom: 18px;
   border: 1px solid var(--white-color);
-
 }
-.pay-now-second-btn{
+.pay-now-second-btn {
   margin-bottom: 18px;
 }
-.modal-form-pay-now-product-right{
+.modal-form-pay-now-product-right {
   background-color: var(--main-hover-color);
   width: 100%;
   height: 100%;
@@ -130,27 +145,27 @@
   align-items: center;
 
 } */
-.modal-form-pay-now-product{
+.modal-form-pay-now-product {
   min-width: 311px;
- height: 100%;
+  height: 100%;
 }
-.modal-picture-pay-now{
-margin-bottom: 8px;
+.modal-picture-pay-now {
+  margin-bottom: 8px;
 }
-.modal-form-pay-now-product-wrap{
-width: 160px;
-margin: 0 auto;
-padding-top: 18px;
-padding-bottom: 18px;
+.modal-form-pay-now-product-wrap {
+  width: 160px;
+  margin: 0 auto;
+  padding-top: 18px;
+  padding-bottom: 18px;
 }
-.modal-form-pay-now-price-title{
+.modal-form-pay-now-price-title {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.33;
   letter-spacing: -0.02em;
   margin-bottom: 8px;
 }
-.modal-form-pay-now-price-item{
+.modal-form-pay-now-price-item {
   font-weight: 600;
   font-size: 18px;
   line-height: 1.33;
@@ -158,77 +173,68 @@ padding-bottom: 18px;
   color: var(--main-accent-color);
   margin-bottom: 8px;
 }
-.modal-form-pay-now-weight{
+.modal-form-pay-now-weight {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.33;
   letter-spacing: -0.02em;
   margin-bottom: 8px;
- margin-top: 8px;
+  margin-top: 8px;
 }
 @media screen and (min-width: 768px) {
-  .pay-now-subtitle:before{
-   left: 380px;
+  .pay-now-subtitle:before {
+    left: 380px;
     width: 100px;
-
   }
-  .pay-now-subtitle::after{
-
+  .pay-now-subtitle::after {
     width: 100px;
-    ;
   }
-  .modal-form-pay-now-icon-card-wrap{
-
+  .modal-form-pay-now-icon-card-wrap {
     left: 690px;
     bottom: 330px;
   }
-  .modal-form-pay-now-field-card-date{
+  .modal-form-pay-now-field-card-date {
     width: 50%;
   }
-  .modal-form-pay-now-field-card-cvc{
+  .modal-form-pay-now-field-card-cvc {
     width: 50%;
   }
-  .modal-form-pay-now-icon-cvc-wrap{
-
+  .modal-form-pay-now-icon-cvc-wrap {
     left: 690px;
     bottom: 270px;
   }
-  .pay-now{
-   display: flex;
-   justify-content: center;
-   align-items: center;
-flex-direction: row-reverse;
+  .pay-now {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row-reverse;
   }
   .modal.pay-now {
     min-width: 750px;
     min-height: 471px;
-
   }
-  .modal-form-pay-now-left{
+  .modal-form-pay-now-left {
     width: 50%;
   }
-  .modal-form-pay-now-product-right{
+  .modal-form-pay-now-product-right {
     width: 50%;
-
   }
-
 }
 @media screen and (min-width: 1200px) {
   .modal.pay-now {
     min-width: 1000px;
     min-height: 671px;
-
   }
-  .modal-form-pay-now-icon-card-wrap{
+  .modal-form-pay-now-icon-card-wrap {
     left: 900px;
   }
-  .modal-form-pay-now-icon-cvc-wrap{
+  .modal-form-pay-now-icon-cvc-wrap {
     left: 900px;
   }
-  .pay-now-subtitle:before{
+  .pay-now-subtitle:before {
     left: 550px;
   }
-  .pay-now-subtitle::after{
+  .pay-now-subtitle::after {
     right: 60px;
   }
 }
