--- a/src/partials/pay-now.html
+++ b/src/partials/pay-now.html
@@ -32,7 +32,7 @@
     <li class="pay-now-type-item">
       <a href="#"
         ><svg class="pay-now-icon" width="18" height="18">
-          <use href="../img/sprite.svg#icon-paypal2"></use>
+          <use href="/img/sprite.svg#icon-paypal2"></use>
         </svg>
       </a>
     </li>
@@ -52,7 +52,7 @@
       </label>
       <span class="modal-form-pay-now-span">Payment card</span>
       <span class="modal-form-pay-now-icon-card-wrap"><svg class="modal-form-pay-now-card" width="24" height="24">
-        <use href="../img/sprite.svg#iconMastercard"></use>
+        <use href="/img/sprite.svg#iconMastercard"></use>
       </svg></span>
       <label class="modal-form-pay-now-field">
         <input
@@ -82,7 +82,7 @@
           />
         </label>
         <span class="modal-form-pay-now-icon-cvc-wrap"><svg class="modal-form-pay-now-cvc" width="24" height="24">
-          <use href="../img/sprite.svg#icon-cvc"></use>
+          <use href="/img/sprite.svg#icon-cvc"></use>
         </svg></span>
         <label class="modal-form-pay-now-field-card-cvc">
           <input
