--- a/src/partials/pay-now.html
+++ b/src/partials/pay-now.html
@@ -2,162 +2,234 @@
 
 <div class="modal pay-now" data-modal="2">
   <div class="modal-form-pay-now-left">
-  <button
-    type="button"
-    class="modal-close-pay-now-btn js-modal-close"
-    data-modal="2"
-  >
-    <svg class="modal-close-icon-pay-now" width="24" height="24">
-      <use href="/img/sprite.svg#icon-arrow-left"></use>
-    </svg>
-  </button>
-  <p class="modal-form-pay-now-title section-title">
-    PAY<span class="pay-now-span">NOW</span>
-  </p>
-  <ul class="pay-now-type-list">
-    <li class="pay-now-type-item">
-      <a href="#"
-        ><svg class="pay-now-icon" width="34" height="34">
-          <use href="/img/sprite.svg#icon-apple-pay"></use>
-        </svg>
-      </a>
-    </li>
-    <li class="pay-now-type-item">
-      <a href="#"
-        ><svg class="pay-now-icon" width="34" height="34">
-          <use href="/img/sprite.svg#icon-google-pay"></use>
-        </svg>
-      </a>
-    </li>
-    <li class="pay-now-type-item">
-      <a href="#"
-        ><svg class="pay-now-icon" width="18" height="18">
-          <use href="/img/sprite.svg#icon-paypal2"></use>
-        </svg>
-      </a>
-    </li>
-  </ul>
-  <button type="button" class="pay-now-first-btn btn">Pay now</button>
-  <p class="pay-now-subtitle">Or pay with card</p>
-  <div class="modal-form-wrap-pay-now">
-    <form class="modal-form-pay-now">
-      <span class="modal-form-pay-now-span">Enter your email</span>
-      <label class="modal-form-pay-now-field">
-        <input
-          class="modal-form-pay-now-input"
-          type="text"
-          name="user_mail"
-          required
-        />
-      </label>
-      <span class="modal-form-pay-now-span">Payment card</span>
-      <span class="modal-form-pay-now-icon-card-wrap"><svg class="modal-form-pay-now-card" width="24" height="24">
-        <use href="/img/sprite.svg#iconMastercard"></use>
-      </svg></span>
-      <label class="modal-form-pay-now-field">
-        <input
-          class="modal-form-pay-now-input"
-          type="tel"
-          name="user_card_number"
-          required
-          minlength="16"
-          maxlength="16"
-          pattern="[0-9]{4} [0-9]{4} [0-9]{4} [0-9]{4}"
-          title="1234 1234 1234 1234"
-          placeholder="1234 1234 1234 1234"
-        />
-      </label>
-      <div class="modal-form-input-card-wrap">
-        <label class="modal-form-pay-now-field-card-date">
+    <button
+      type="button"
+      class="modal-close-pay-now-btn js-modal-close"
+      data-modal="2"
+    >
+      <svg class="modal-close-icon-pay-now" width="16" height="14">
+        <use href="/img/sprite.svg#icon-arrow-left"></use>
+      </svg>
+    </button>
+    <p class="modal-form-pay-now-title section-title">
+      PAY<span class="pay-now-span">NOW</span>
+    </p>
+    <ul class="pay-now-type-list">
+      <li class="pay-now-type-item">
+        <a href="#"
+          ><svg class="pay-now-icon" width="34" height="34">
+            <use href="/img/sprite.svg#icon-apple-pay"></use>
+          </svg>
+        </a>
+      </li>
+      <li class="pay-now-type-item">
+        <a href="#"
+          ><svg class="pay-now-icon" width="34" height="34">
+            <use href="/img/sprite.svg#icon-google-pay"></use>
+          </svg>
+        </a>
+      </li>
+      <li class="pay-now-type-item">
+        <a href="#"
+          ><svg class="pay-now-icon" width="18" height="18">
+            <use href="/img/sprite.svg#icon-paypal2"></use>
+          </svg>
+        </a>
+      </li>
+    </ul>
+    <button type="button" class="pay-now-first-btn btn">Pay now</button>
+    <p class="pay-now-subtitle">Or pay with card</p>
+    <div class="modal-form-wrap-pay-now">
+      <form class="modal-form-pay-now">
+        <span class="modal-form-pay-now-span">Enter your email</span>
+        <label class="modal-form-pay-now-field">
           <input
             class="modal-form-pay-now-input"
-            type="tel"
-            name="user_card_number_action"
+            type="text"
+            name="user_mail"
             required
-            minlength="4"
-            maxlength="4"
-            pattern="[0-9]{2}/[0-9]{2}"
-            title="MM/YY"
-            placeholder="MM/YY"
           />
         </label>
-        <span class="modal-form-pay-now-icon-cvc-wrap"><svg class="modal-form-pay-now-cvc" width="24" height="24">
-          <use href="/img/sprite.svg#icon-cvc"></use>
-        </svg></span>
-        <label class="modal-form-pay-now-field-card-cvc">
+        <span class="modal-form-pay-now-span">Payment card</span>
+        <span class="modal-form-pay-now-icon-card-wrap"
+          ><svg class="modal-form-pay-now-card" width="24" height="24">
+            <use href="/img/sprite.svg#iconMastercard"></use>
+          </svg>
+        </span>
+        <label class="modal-form-pay-now-field">
           <input
             class="modal-form-pay-now-input"
             type="tel"
-            name="user_card_cvc"
+            name="user_card_number"
+            required
+            minlength="16"
+            maxlength="16"
+            pattern="[0-9]{4} [0-9]{4} [0-9]{4} [0-9]{4}"
+            title="1234 1234 1234 1234"
+            placeholder="1234 1234 1234 1234"
+          />
+        </label>
+        <div class="modal-form-input-card-wrap">
+          <label class="modal-form-pay-now-field-card-date">
+            <input
+              class="modal-form-pay-now-input"
+              type="tel"
+              name="user_card_number_action"
+              required
+              minlength="4"
+              maxlength="4"
+              pattern="[0-9]{2}/[0-9]{2}"
+              title="MM/YY"
+              placeholder="MM/YY"
+            />
+          </label>
+          <span class="modal-form-pay-now-icon-cvc-wrap"
+            ><svg class="modal-form-pay-now-cvc" width="24" height="24">
+              <use href="/img/sprite.svg#icon-cvc"></use>
+            </svg>
+          </span>
+          <label class="modal-form-pay-now-field-card-cvc">
+            <input
+              class="modal-form-pay-now-input"
+              type="tel"
+              name="user_card_cvc"
+              required
+              minlength="3"
+              maxlength="3"
+              pattern="[0-9]{3}"
+              title="123"
+              placeholder="CVC"
+            />
+          </label>
+        </div>
+        <span class="modal-form-pay-now-span">Card name</span>
+
+        <label class="modal-form-pay-now-field">
+          <input
+            class="modal-form-pay-now-input"
+            type="text"
+            name="user_card_name"
             required
             minlength="3"
-            maxlength="3"
-            pattern="[0-9]{3}"
-            title="123"
-            placeholder="CVC"
+            pattern="^[a-zA-Zа-яА-Я]+"
           />
         </label>
-      </div>
-      <span class="modal-form-pay-now-span">Card name</span>
-
-      <label class="modal-form-pay-now-field">
-        <input
-          class="modal-form-pay-now-input"
-          type="text"
-          name="user_card_name"
-          required
-          minlength="3"
-          pattern="^[a-zA-Zа-яА-Я]+"
-        />
-      </label>
-      <span class="modal-form-pay-now-span">Country or rigion</span>
-    </form>
-    <select class="modal-form-pay-now-check" name="country" id="country">
-      <option class="modal-form-pay-now-choose" value="Ukr">Ukraine</option>
-      <option value="Pl">Poland</option>
-      <option value="Grm">Germany</option>
-    </select>
-    <button type="button" class="pay-now-second-btn btn">Pay now</button>
+        <span class="modal-form-pay-now-span">Country or region</span>
+      </form>
+      <select class="modal-form-pay-now-check" name="country" id="country">
+        <option class="modal-form-pay-now-choose" value="Ukr">Ukraine</option>
+        <option value="Pl">Poland</option>
+        <option value="Grm">Germany</option>
+      </select>
+      <button type="button" class="pay-now-second-btn btn">Pay now</button>
+    </div>
   </div>
-</div>
   <div class="modal-form-pay-now-product-right">
+    <div class="modal-form-pay-now-product-wrap-one">
+      <p class="modal-form-pay-now-price-title">Total price:</p>
+      <p class="modal-form-pay-now-price-item">$ 599.99</p>
+      <picture class="modal-picture-pay-now">
+        <source
+          type="image/webp"
+          media="(min-width: 1200px)"
+          srcset="/img/buy-now/rounded.webp 1x, /img/buy-now/rounded2x.webp 2x"
+          type="image/jpeg"
+        />
+        <source
+          media="(min-width: 1200px)"
+          srcset="/img/buy-now/rounded.jpg 1x, /img/buy-now/rounded2x.jpg 2x"
+          type="image/jpeg"
+        />
+        <source
+          type="image/webp"
+          media="(min-width: 768px)"
+          srcset="/img/buy-now/rounded.webp 1x, /img/buy-now/rounded2x.webp 2x"
+          type="image/jpeg"
+        />
+        <source
+          media="(min-width: 768px)"
+          srcset="/img/buy-now/rounded.jpg 1x, /img/buy-now/rounded2x.jpg 2x"
+          type="image/jpeg"
+        />
+
+        <img
+          class="pay-now-img"
+          src="/img/buy-now/rounded.jpg"
+          alt="chocolate"
+        />
+      </picture>
+      <p class="modal-form-pay-now-weight">100g</p>
+      <select class="modal-form-pay-now-check-item" name="product" id="product">
+        <option value="1">1</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+      </select>
+    </div>
     <div class="modal-form-pay-now-product-wrap">
-    <p class="modal-form-pay-now-price-title">Total price:</p>
-    <p class="modal-form-pay-now-price-item">$ 399.99</p>
-        <picture class="modal-picture-pay-now">
-          <source
-            media="(min-width: 1200px)"
-            srcset="
-              /img/buy-now/buynow-tab-1.jpg    1x,
-              /img/buy-now/buynow-tab-1-2x.jpg 2x
-            "
-            type="image/jpeg"
-          />
-          <source
-            media="(min-width: 768px)"
-            srcset="
-              /img/buy-now/buynow-tab-1.jpg    1x,
-              /img/buy-now/buynow-tab-1-2x.jpg 2x
-            "
-            type="image/jpeg"
-          />
-          <source
-            media="(max-width: 767px)"
-            srcset="
-              /img/buy-now/buynow-mob-1.jpg    1x,
-              /img/buy-now/buynow-mob-1-2x.jpg 2x
-            "
-          />
+      <p class="modal-form-pay-now-price-title">Total price:</p>
+      <p class="modal-form-pay-now-price-item">$ 499.99</p>
+      <picture>
+        <source
+          type="image/webp"
+          media="(max-width: 767px)"
+          srcset="
+            /img/buy-now/buynow-mob-2.webp    1x,
+            /img/buy-now/buynow-mob-2-2x.webp 2x
+          "
+        />
+        <source
+          media="(max-width: 767px)"
+          srcset="
+            /img/buy-now/buynow-mob-2.jpg    1x,
+            /img/buy-now/buynow-mob-2-2x.jpg 2x
+          "
+        />
 
-          <img class="" src=" /img/buy-now/buynow-mob-1.jpg" alt="chocolate" />
-        </picture>
-        <p class="modal-form-pay-now-weight">100g</p>
-        <select class="modal-form-pay-now-check-item" name="product" id="product">
-          <option value="1">1</option>
-          <option value="2">2</option>
-          <option value="3">3</option>
-        </select>
+        <img
+          class="pay-now-img"
+          src=" /img/buy-now/buynow-mob-2.jpg"
+          alt="chocolate"
+        />
+      </picture>
+      <p class="modal-form-pay-now-weight">100g</p>
+      <select class="modal-form-pay-now-check-item" name="product" id="product">
+        <option value="1">1</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+      </select>
+    </div>
+    <div class="modal-form-pay-now-product-wrap">
+      <p class="modal-form-pay-now-price-title">Total price:</p>
+      <p class="modal-form-pay-now-price-item">$ 399.99</p>
+      <picture class="modal-picture-pay-now">
+        <source
+          type="image/webp"
+          media="(max-width: 767px)"
+          srcset="
+            /img/buy-now/buynow-mob-1.webp    1x,
+            /img/buy-now/buynow-mob-1-2x.webp 2x
+          "
+        />
+        <source
+          media="(max-width: 767px)"
+          srcset="
+            /img/buy-now/buynow-mob-1.jpg    1x,
+            /img/buy-now/buynow-mob-1-2x.jpg 2x
+          "
+        />
 
-  </div>
+        <img
+          class="pay-now-img"
+          src=" /img/buy-now/buynow-mob-1.jpg"
+          alt="chocolate"
+        />
+      </picture>
+      <p class="modal-form-pay-now-weight">100g</p>
+      <select class="modal-form-pay-now-check-item" name="product" id="product">
+        <option value="1">1</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+      </select>
+    </div>
   </div>
 </div>
