--- a/src/css/buy-now.css
+++ b/src/css/buy-now.css
@@ -6,6 +6,28 @@
   overflow: scroll;
   padding: 32px 24px;
 }
+.modal-close-buynow-btn {
+  position: absolute;
+  top: 14px;
+  right: 14px;
+  background-color: transparent;
+  border-radius: 50%;
+  border-color: transparent;
+  padding: 0;
+  transition: background-color var(--time-function);
+}
+.modal-close-buynow-btn:hover,
+.modal-close-buynow-btn:focus {
+  background-color: var(--main-hover-color);
+}
+.modal-close-buynow-btn:hover .modal-close-icon-buynow,
+.modal-close-buynow-btn:focus .modal-close-icon-buynow {
+  fill: var(--main-accent-color);
+}
+
+.modal-close-icon-buynow {
+  transition: fill var(--time-function);
+}
 .modal-title.section-title {
   margin-bottom: 32px;
 
@@ -18,6 +40,11 @@
 }
 .modal-title-span {
   color: var(--primary-color);
+}
+.modal-list {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 32px;
 }
 .modal-item {
   display: flex;
@@ -38,7 +65,8 @@
   margin-right: 93px;
 }
 .modal-item-text {
-  padding: 6px 16px;
+  display: block;
+  position: relative;
   width: 70px;
   height: 29px;
   font-weight: 600;
@@ -50,9 +78,53 @@
   border: 1px solid rgba(17, 17, 17, 0.1);
   border-radius: 100px;
   text-align: center;
+  cursor: pointer;
 }
-.modal-form-leave-a-review.buy {
-  margin-top: 32px;
+.modal-input-check {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 70px;
+  height: 29px;
+  opacity: 0;
+  border-radius: 100px;
+  cursor: pointer;
+  pointer-events: none;
+}
+.modal-item-text .modal-input-span {
+  width: 100%;
+  height: 100%;
+  padding: 6px 16px;
+  border-radius: 100px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  line-height: 25px;
+  transition: 0.5s ease;
+}
+input[type='checkbox']:checked ~ .modal-input-span {
+  background-color: var(--main-hover-color);
+  color: var(--main-accent-color);
+  border: transparent;
+  outline: none;
+
+}
+
+
+
+.modal-form-buynow-field {
+  display: block;
+  margin-bottom: 14px;
+}
+.modal-form-buynow-input {
+  padding: 14px 18px;
+  width: 100%;
+  border-radius: 8px;
+  border: 1.5px solid rgba(17, 17, 17, 0.1);
+  box-shadow: 0 5.44px 5.44px #00000008;
+  background-color: var(--white-color);
+  transition: border-color var(--time-function);
 }
 .label-desc {
   display: block;
@@ -63,24 +135,63 @@
   letter-spacing: -0.02em;
   color: #000000;
 }
-.input-phone.buy {
-  padding-left: 125px;
+.modal-form-buynow-input::placeholder,
+.modal-form-buynow-message::placeholder {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.21;
+  letter-spacing: -0.02em;
+  color: var(--placeholder-color);
 }
-.modal-form-phone-wraper.buy {
-  top: 33px;
+.input-buy-phone {
+  padding-left: 106px;
+}
+.modal-form-phone-buy-wrapper {
+  display: block;
+  position: relative;
+}
+.flag-buy-phone {
+  position: absolute;
+  top: 50%;
+  left: 18px;
+  transform: translateY(-50%);
+}
+.modal-form-buy-input-tel-text {
+  position: absolute;
+  top: 50%;
+  left: 50px;
+  transform: translateY(-50%);
+  font-weight: 500;
+  line-height: 1.21;
+  letter-spacing: -0.02em;
+}
+.modal-form-buy-input-tel-text::after {
+  content: '';
+  display: inline-block;
+  position: absolute;
+  top: -5px;
+  right: -8px;
+  width: 1px;
+  height: 25px;
+  background-color: var(--placeholder-color);
 }
 .icon-card {
   position: absolute;
-  bottom: 30px;
+  top: 10px;
   right: 15px;
-  width: 22px;
-  height: 12px;
 }
-.modal-form-leave-a-review-input.buy::placeholder,
-.modal-form-leave-a-review-input.buynow::placeholder,
-.modal-form-leave-a-review-message.buy::placeholder {
-  font-size: 14px;
+.modal-form-buynow-message {
+  display: block;
+  padding: 14px 18px;
+  width: 100%;
+  resize: none;
+  height: 91px;
+  border-radius: 8px;
+  box-shadow: 0 5.44px 5.44px #00000008;
+  border: 1.5px solid rgba(17, 17, 17, 0.1);
+  transition: border-color var(--time-function);
 }
+
 .modal-form-phone-wraper.buy {
   position: absolute;
   top: 32px;
@@ -97,17 +208,19 @@
     max-width: 609px;
     max-height: 650px;
   }
-  .modal-form-leave-a-review-title-wrap.buy {
+  /* .modal-form-leave-a-review-title-wrap.buy {
     width: 100%;
-  }
+  } */
   .modal-title.section-title {
     font-weight: 600;
     font-size: 24px;
     line-height: 1.17;
   }
-  .modal-list {
+
+  /* .modal-buynow-list {
     display: flex;
-  }
+    flex-direction: column;
+  } */
   .modal-item {
     display: block;
     padding: 18px 20px;
@@ -120,6 +233,7 @@
     margin-right: 14px;
   }
   .modal-item-text {
+    display: block;
     padding: 8px 29px;
     width: 96px;
     height: 33px;
