--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -27,7 +27,7 @@
           <a href="#top-sellers" class="header-item-link" data-aos="zoom-in" data-aos-delay="450" data-aos-duration="2000">Top sellers</a>
         </li>
         <li class="header-item">
-          <a href="#uniqe-components" class="header-item-link" data-aos="zoom-in" data-aos-delay="550" data-aos-duration="2000"
+          <a href="#reviews" class="header-item-link" data-aos="zoom-in" data-aos-delay="550" data-aos-duration="2000"
             >Chocolate is loved</a
           >
         </li>
@@ -79,7 +79,7 @@
         <a href="#top-sellers" class="header-sidebar-item-link">Top sellers</a>
       </li>
       <li class="header-sidebar-item">
-        <a href="#uniqe-components" class="header-sidebar-item-link"
+        <a href="#reviews" class="header-sidebar-item-link"
           >Chocolate is loved</a
         >
       </li>
