--- a/src/css/buy-now.css
+++ b/src/css/buy-now.css
@@ -3,7 +3,7 @@
   max-width: 311px;
   height: 95%;
   max-height: 500px;
-  overflow: scroll;
+  overflow-y: scroll;
   padding: 32px 24px;
 }
 .modal-close-buynow-btn {
@@ -62,7 +62,7 @@
   margin-bottom: 8px;
 }
 .modal-picture {
-  margin-right: 93px;
+  margin-right: auto;
 }
 .modal-item-text {
   display: block;
@@ -92,6 +92,7 @@
   pointer-events: none;
 }
 .modal-item-text .modal-input-span {
+  display: block;
   width: 100%;
   height: 100%;
   padding: 6px 16px;
@@ -103,17 +104,14 @@
   line-height: 25px;
   transition: 0.5s ease;
 }
-input[type='checkbox']:checked ~ .modal-input-span {
+.modal-input-check[type='checkbox']:checked ~ .modal-input-span {
   background-color: var(--main-hover-color);
   color: var(--main-accent-color);
-  border: transparent;
-  outline: none;
-
+  border-color: var(--main-accent-color);
 }
 
-
-
 .modal-form-buynow-field {
+  width: 100%;
   display: block;
   margin-bottom: 14px;
 }
@@ -125,6 +123,7 @@ input[type='checkbox']:checked ~ .modal-input-span {
   box-shadow: 0 5.44px 5.44px #00000008;
   background-color: var(--white-color);
   transition: border-color var(--time-function);
+  outline: none;
 }
 .label-desc {
   display: block;
@@ -190,89 +189,108 @@ input[type='checkbox']:checked ~ .modal-input-span {
   box-shadow: 0 5.44px 5.44px #00000008;
   border: 1.5px solid rgba(17, 17, 17, 0.1);
   transition: border-color var(--time-function);
+  outline: none;
 }
 
-.modal-form-phone-wraper.buy {
-  position: absolute;
-  top: 32px;
-  left: 24px;
-  display: flex;
-  align-items: center;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.33;
-  color: rgba(0, 0, 0, 1);
-}
 @media screen and (min-width: 768px) {
   .modal.buynow {
     max-width: 609px;
     max-height: 650px;
+    padding: 40px;
   }
-  /* .modal-form-leave-a-review-title-wrap.buy {
-    width: 100%;
-  } */
+
   .modal-title.section-title {
     font-weight: 600;
     font-size: 24px;
     line-height: 1.17;
   }
 
-  /* .modal-buynow-list {
-    display: flex;
-    flex-direction: column;
-  } */
+  .modal-list {
+    flex-direction: row;
+    justify-content: center;
+    gap: 16px;
+  }
+
   .modal-item {
-    display: block;
+    flex-direction: column;
     padding: 18px 20px;
     width: 160px;
     height: 196px;
-    margin-left: auto;
-    margin-right: auto;
+    gap: 14px;
   }
-  .modal-picture {
-    margin-right: 14px;
+  .modal-item:not(:last-child) {
+    margin-bottom: 0px;
+  }
+  .modal-close-icon-buynow {
+    width: 28px;
+    height: 28px;
   }
   .modal-item-text {
-    display: block;
-    padding: 8px 29px;
     width: 96px;
     height: 33px;
     margin-left: auto;
     margin-right: auto;
-
-    text-align: center;
   }
-  .modal-form-leave-a-review.buy {
-    margin-top: 40px;
+  .modal-input-check {
+    width: 96px;
+    height: 33px;
+  }
+  .modal-item-text .modal-input-span {
+    padding: 8px 28px;
+  }
+
+  .buynow-form-name {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    padding: 0;
+    gap: 21px;
+  }
+  .modal-picture {
+    margin-right: 0;
+  }
+  .modal-form-buynow-input {
+    padding: 22px 24px;
+  }
+  .modal-form-buynow-input::placeholder,
+  .modal-form-buynow-message::placeholder {
+    font-size: 18px;
+    line-height: 1.22;
   }
   .label-desc {
     font-size: 14px;
     line-height: 1.29;
   }
-  .modal-form-leave-a-review-input.buynow {
-    width: 48%;
+  .modal-form-buynow-field {
+    margin-bottom: 18px;
   }
-  .modal-form-leave-a-review-input.buynow:not(:last-child) {
-    margin-right: 19px;
+  .input-buy-phone {
+    padding-left: 165px;
   }
-  .modal-form-leave-a-review-input.buy::placeholder,
-  .modal-form-leave-a-review-input.buynow::placeholder,
-  .modal-form-leave-a-review-message.buy::placeholder {
+  .flag-buy-phone {
+    width: 32px;
+    height: 32px;
+  }
+  .modal-form-buy-input-tel-text {
     font-size: 18px;
+    line-height: 1.2;
+    margin-left: 18px;
   }
-  .modal-form-phone-wraper.buy {
-    top: 47px;
+  .modal-form-buy-input-tel-text::after {
+    right: -25px;
+    height: 32px;
   }
   .icon-card {
-    position: absolute;
-    bottom: 43px;
-    right: 25px;
-    width: 30px;
-    height: 18px;
+    width: 32px;
+    height: 32px;
+    top: 15px;
+    right: 20px;
   }
-  .modal-form-leave-a-review.btn.buy {
+  .modal-form-buynow-message {
+    height: 137px;
+  }
+  .btn.modal-form-buynow-btn {
     padding: 14px 40px;
-    margin: 0;
   }
 }
 
@@ -282,6 +300,7 @@ input[type='checkbox']:checked ~ .modal-input-span {
     max-height: 1058px;
     padding: 48px;
     overflow: auto;
+    border-radius: 15px;
   }
   .modal-form-leave-a-review-input.buynow:not(:last-child) {
     margin-right: 15px;
