--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,4 +1,4 @@
-<section class="section reviews">
+<section class="section reviews" id="reviews">
   <div class="container">
     <h2 class="section-title reviews">
       <span class="section-title-accent">chocolate</span> is loved
